<resources>
    <string name="app_name">Social Network</string>
    <string name="smiley">Smiley</string>

    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_redirect">Don\'t have an account? Register</string>
    <string name="login_redirect">Already have an account? Login</string>
    <string name="logout">Logout</string>

    <!-- Posts -->
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="heart">Heart</string>
    <string name="comment">Comment</string>
    <string name="like_total">Total likes</string>
    <string name="dislike_total">Total dislikes</string>
    <string name="heart_total">Total hearts</string>
    <string name="post_content">Post content</string>
    <string name="date">Date</string>
    <string name="zero">0</string>
    <string name="image">Image</string>
    <string name="more_options">More options</string>
    <string name="create_post">Create Post</string>
    <string name="write_post">Write a post</string>
    <string name="choose_files">Choose files</string>
    <string name="no_file_chosen">No file chosen</string>
    <plurals name="files_chosen_count">
        <item quantity="one">%d file chosen</item>
        <item quantity="other">%d files chosen</item>
    </plurals>
    <string name="sort">ascending</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="report_post">Report Post</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>

    <!-- Comments-->
    <string name="write_a_comment">Write a comment</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="report_comment">Report Comment</string>
    <string name="reply_to_comment">Reply To Comment</string>
    <string name="comment_content">Comment content</string>
    <string name="update_comment">Update</string>

    <!-- Groups-->
    <string name="create_new_group">Create new group</string>
    <string name="create_group">Create group</string>
    <string name="join_group">Join group</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="creation_date">Creation date:</string>
    <string name="group_admin">Group admin:</string>
    <string name="write_name_of_group">Write name of group</string>
    <string name="write_group_description">Write group description</string>
    <string name="edit_group">Edit Group</string>
    <string name="suspend_group">Suspend Group</string>
    <string name="reason_for_suspending">Reason for suspending the group:</string>
    <string name="write_suspending_reason">Reason for suspending</string>
    <string name="suspend">Suspend</string>

    <!-- Reports-->
    <string name="friend_request">Friend Requests</string>
    <string name="comment_reports">Comment Reports</string>
    <string name="user_reports">User Reports</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="accept">Accept</string>
    <string name="delete_request">Delete request</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="tab_layout_desc">Switch between notifications</string>
    <string name="post_reports">Post Reports</string>
    <string name="reason_for_reporting">Reason for reporting: </string>
    <string name="report_for_post">Report for post with content: </string>
    <string name="report_for_comment">Report for comment with text: </string>
    <string name="report_for_user">Report for user with username: </string>
    <string name="reason">Reason</string>
    <string name="create_report">Create Report</string>
    <string name="select_reason">Select a reason for reporting:</string>
    <string name="user_full_name">%1$s %2$s</string>

    <!-- Profile -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_name">Profile Name</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="show_password">Show Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="last_seen">"Last seen: "</string>
    <string name="friends">Friends:</string>
    <string name="groups_profile">Groups:</string>
    <string name="save_changes">Save Changes</string>

    <!-- Search -->
    <string name="add_friend">Add friend</string>

    <!-- Confirmation dialog -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_post">Are you sure you want to delete this post?</string>
    <string name="confirm_delete_group">Are you sure you want to suspend this group?</string>
    <string name="confirm_delete_friend_request">Are you sure you want to delete this friend request?</string>
    <string name="confirm_unblock">Are you sure you want to unblock this user?</string>
    <string name="confirm_block">Are you sure you want to block this user?</string>
    <string name="confirm_delete_comment_report">Are you sure you want to delete this comment report?</string>
    <string name="confirm_delete_user_report">Are you sure you want to delete this user report?</string>
    <string name="confirm_delete_post_report">Are you sure you want to delete this post report?</string>


</resources>