<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_search"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item
        android:id="@+id/bottom_groups"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/groups" />

    <item
        android:id="@+id/bottom_notifications"
        android:icon="@drawable/baseline_email_24"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile" />


</menu>