<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp">

    <ImageButton
        android:id="@+id/moreOptionsButton"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_more_horiz_18"
        android:background="@android:color/transparent"
        android:contentDescription="@string/more_options"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/smiley_black_and_white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image" />
    </LinearLayout>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_description"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creation_dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creation_date"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="3dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/groupAdminTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_admin"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/adminTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_admin"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="3dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_group"
        android:textColor="@color/vector_fill"
        android:backgroundTint="@color/yellow"
        android:layout_margin="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray" />



</LinearLayout>
