<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="3dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_border">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/smiley_circle"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>


        </LinearLayout>

        <ImageButton
            android:id="@+id/moreOptionsButton"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginStart="200dp"
            android:src="@drawable/baseline_more_horiz_18"
            android:background="@android:color/transparent"
            android:contentDescription="@string/more_options"/>
    </LinearLayout>


    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_content"
        android:textSize="15sp"
        android:padding="8dp"
        android:background="@drawable/rounded_grey_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_thumb_up_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like"/>

        <TextView
            android:id="@+id/likeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"/>

        <ImageButton
            android:id="@+id/dislikeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_thumb_down_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dislike"/>

        <TextView
            android:id="@+id/dislikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dislike"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"/>

        <ImageButton
            android:id="@+id/heartButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_favorite_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/heart"/>

        <TextView
            android:id="@+id/heartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"/>

        <ImageButton
            android:id="@+id/likeButtonCount"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_thumb_up_24_blue"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like_total"/>

        <TextView
            android:id="@+id/likeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="12sp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="3dp"/>

        <ImageButton
            android:id="@+id/dislikeButtonCount"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_thumb_down_24_blue"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dislike_total"/>

        <TextView
            android:id="@+id/dislikeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="12sp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="3dp"/>

        <ImageButton
            android:id="@+id/heartButtonCount"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_favorite_24_red"
            android:background="@android:color/transparent"
            android:contentDescription="@string/heart_total"/>

        <TextView
            android:id="@+id/heartCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="12sp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="3dp"/>


    </LinearLayout>



</LinearLayout>
