<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="3dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_border">

            <ImageView
                android:id="@+id/reportProfileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/smiley_circle"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

    <TextView
        android:id="@+id/reportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_for_post"
        android:textSize="14sp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/reportContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="14sp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

        <TextView
            android:id="@+id/reasonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason_for_reporting"
            android:textSize="14sp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/reasonContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textSize="14sp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="10sp"
            android:textColor="@color/vector_fill"
            android:backgroundTint="@color/yellow"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_request"
            android:textSize="10sp"
            android:textColor="@color/vector_fill"
            android:backgroundTint="@color/grey"
            android:layout_margin="4dp"/>
    </LinearLayout>

</LinearLayout>
