<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="3dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_border">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/smiley_circle"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/createPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:backgroundTint="@color/yellow"
            android:padding="8dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

</LinearLayout>
